...
    }()
    
    private var rootView            = UIView()
    private let groupToolsView      = UIView()
    private var separatorView       = UIView()
    private let groupEndView        = UIView()
    private var groupPencilSizeView = UIView()
    private var groupEraseSizeView  = UIView()
    
    private lazy var groupSelectHexColorView = { return SelectColorView(frame: CGRect(x: 0, y: 0, width: 90, height: 500)) }()
    
    public  var groupToolsButtons      = [Button]()
    private var groupEndButtons        = [Button]()
    
    private let groupSelectHexColorViewIdentifier = "groupSelectHexColorView"
    
...
