...
    public static let NIB_NAME = "SelectColorView"
    
    @IBOutlet var contentView: UIView!    
    @IBOutlet weak var viewWhole: UIView!
    @IBOutlet weak var selectColorCollectionView: ColorsCollectionView!
    
    @IBOutlet weak var expandButton: UIButton!
    
    @IBOutlet weak var animationBaseContentView: UIView!
    @IBOutlet weak var animationBaseViewWhole: UIView!
    @IBOutlet weak var animationBaseCollectionView: UIView!
    
    var isExpanded = false
...
